# go-rest-api

./: .gitignore  Makefile  README.md  docker-compose.yml  go.mod  pyproject.toml
.github/workflows/: golangci-lint.yml  test.yml
terraform/development/: .terraform.lock.hcl  main.tf
terraform/modules/: api_gateway.tf  lambda.tf  outputs.tf  s3.tf  variables.tf
